--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>First Page</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tenetur, dolorum.</p>
 </body>
 </html>
